@@ -1,5 +1,12 @@
 2006-12-12  Akim Demaille  <demaille@gostai.com>
 
+	Don't be afraid to pass static strings to send
+	* src/uexpression.cc: here, instead of first saving them
+	in errorString.
+	Remove one definition of errorString that is now useless.
+
+2006-12-12  Akim Demaille  <demaille@gostai.com>
+
 	Formatting changes
 	* src/uexpression.cc: Also, reduce some scopes.
 
